Fix padding on mobile

--- a/app/assets/stylesheets/ulab_conference/application.sass
+++ b/app/assets/stylesheets/ulab_conference/application.sass
@@ -8,6 +8,7 @@
 $shadow_colour: $primary-color
 $shadow: 0 0 8px 0px rgba(#000, .5)
 $font-family: 'Molde', Helvetica, Arial, sans-serif
+$padding: 7vw
 
 @import fonts
 
