--- a/app/assets/stylesheets/ulab_conference/main.sass
+++ b/app/assets/stylesheets/ulab_conference/main.sass
@@ -6,7 +6,7 @@ main
   @import slideshow
   @import breadcrumbs
   @import alert
-  padding: 80px
+  padding: $padding
   overflow: scroll
   flex:
     basis: 50%
