--- a/app/assets/stylesheets/ulab_conference/sidebar.sass
+++ b/app/assets/stylesheets/ulab_conference/sidebar.sass
@@ -1,6 +1,5 @@
 & > div:first-child
   @import summary
-  $padding: 80px
   flex:
     basis: 180px
     grow: 1
