--- a/app/assets/stylesheets/ulab_conference/slideshow.sass
+++ b/app/assets/stylesheets/ulab_conference/slideshow.sass
@@ -4,7 +4,7 @@
     bottom: 1px solid #ccc
   background: black
   overflow: hidden
-  margin: 0 -80px
+  margin: 0 (-$padding)
 [data-controller='slideshow']
   position: relative
   z-index: 0
